feat: ability to ignore nonexistent linked work items import (#194)
Refs: #193